--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
     <title>About Us – Real Racing 3 Mod Community & Mission</title>
     <meta name="description"
         content="Learn about the team behind Real Racing 3 Mod. Our mission is to provide the best racing simulation experience for Android and PC players worldwide.">
-    <link rel="canonical" href="https://realracing3modapk.online/aboutus.html">
+    <link rel="canonical" href="https://realracing3modapk.site/aboutus.html">
     <link rel="icon" type="image/icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
         "mainEntity": {
             "@type": "Organization",
             "name": "RealRacingMod",
-            "url": "https://realracing3modapk.online/",
+            "url": "https://realracing3modapk.site/",
             "description": "A dedicated fansite providing optimized racing simulation resources."
         }
     }
