--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <meta name="google-site-verification" content="vKe2wH0QdrOw9APDo4VyFLUow1Rp2z6TSOeyC73UUwU" />
     <meta name="description"
         content="Download Real Racing 3 Mod APK v14.0.1 for Android. Includes unlimited money, gold, and all cars unlocked. Experience the ultimate mobile racing simulator on 40 real-world circuits.">
-    <link rel="canonical" href="https://realracing3modapk.online/">
+    <link rel="canonical" href="https://realracing3modapk.site/">
     <link rel="icon" type="image/icon" href="favicon.ico">
     <link rel="dns-prefetch" href="https://files.an1.net">
     <style>
