--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Real Racing 3 Mod Fan Site</title>
-    <link rel="canonical" href="https://realracing3modapk.online/privacy.html">
+    <link rel="canonical" href="https://realracing3modapk.site/privacy.html">
     <link rel="stylesheet" href="style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@700;800&display=swap"
