--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
             background-color: #000;
             border: 1px solid var(--border-color);
             border-radius: 6px;
-            color: #fff;
+            color: #c9c9c9;
             font-family: var(--font-body);
         }
 
