--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="Download Real Racing 3 Mod APK v14.0.1 for Android. Includes unlimited money, gold, and all cars unlocked. Experience the ultimate mobile racing simulator on 40 real-world circuits.">
     <link rel="canonical" href="https://realracing3modapk.site/">
     <link rel="icon" type="image/icon" href="favicon.ico">
-    <link rel="dns-prefetch" href="https://files.an1.net">
+    <link rel="dns-prefetch" href="https://www.dropbox.com">
     <style>
         :root {
             --bg-dark: #0a0a0a;
@@ -391,7 +391,7 @@
                     </div>
                 </div>
 
-                <a href="https://files.an1.net/real-racing-3-mod-row_14.0.1-an1.com.apk" class="btn-download"
+                <a href="https://www.dropbox.com/scl/fi/ecw07aoaa74oc5rjfw0dg/real-racing-3-mod-apk?rlkey=9096vptvv78b541cfm0mostfy&st=k7z6hs7b&dl=1" class="btn-download"
                     style="margin-top: 20px;" download>Download Latest Version</a>
 
                 <div class="scroll-indicator">
