--- a/real-racing-3-for-pc.html
+++ b/real-racing-3-for-pc.html
@@ -406,7 +406,7 @@
                     </div>
                 </div>
 
-                <a href="https://files.an1.net/real-racing-3-mod-row_14.0.1-an1.com.apk" class="btn-download"
+                <a href="https://www.dropbox.com/scl/fi/ecw07aoaa74oc5rjfw0dg/real-racing-3-mod-apk?rlkey=9096vptvv78b541cfm0mostfy&st=k7z6hs7b&dl=1" class="btn-download"
                     style="padding: 20px 40px;" download>Download PC Version</a>
                 <div class="scroll-indicator">
                     <span></span>
