--- a/index.html
+++ b/index.html
@@ -464,16 +464,15 @@
                 </div>
 
                 <a href="https://www.dropbox.com/scl/fi/ecw07aoaa74oc5rjfw0dg/real-racing-3-mod-apk?rlkey=9096vptvv78b541cfm0mostfy&st=k7z6hs7b&dl=1"
-                    class="btn-download" style="margin-top: 30px;" download>[ Download Real Racing 3 Mod APK – Latest
-                    Version ]</a>
+                    class="btn-download" style="margin-top: 30px;" download> Download Mod APK</a>
 
                 <!-- Mini Highlights -->
                 <div class="hero-stats" style="margin-top: 3rem; gap: 1rem;">
-                    <div class="stat-item"><span class="stat-icon">✅</span> Unlimited Money & Gold</div>
-                    <div class="stat-item"><span class="stat-icon">✅</span> All Cars + Tracks Unlocked</div>
-                    <div class="stat-item"><span class="stat-icon">✅</span> No Ads</div>
-                    <div class="stat-item"><span class="stat-icon">✅</span> Instant Upgrades</div>
-                    <div class="stat-item"><span class="stat-icon">✅</span> Full Career Access</div>
+                    <div class="stat-item"><span class="stat-icon"></span> Unlimited Money & Gold</div>
+                    <div class="stat-item"><span class="stat-icon"></span> All Cars + Tracks Unlocked</div>
+                    <div class="stat-item"><span class="stat-icon"></span> No Ads</div>
+                    <div class="stat-item"><span class="stat-icon"></span> Instant Upgrades</div>
+                    <div class="stat-item"><span class="stat-icon"></span> Full Career Access</div>
                 </div>
 
                 <div class="scroll-indicator">
