--- a/index.html
+++ b/index.html
@@ -308,6 +308,31 @@
             justify-content: center;
             flex-wrap: wrap
         }
+        .trust-badges-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
+    margin: 2rem 0;
+}
+.trust-badge {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem 1rem;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50px;
+    font-size: 0.9rem;
+    font-weight: 500;
+    color: var(--text-primary);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.trust-badge i, .trust-badge span.icon {
+    color: var(--accent-gold);
+}
+
+
 
         .stat-item {
             display: flex;
