--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                     </div>
                     <div class="tech-spec-item">
                         <span class="tech-spec-label">Developer</span>
-                        <span class="tech-spec-value">Firemonkeys Studios / EA</span>
+                        <span class="tech-spec-value"><a href="https://www.ea.com/ea-studios/firemonkeys" rel="noopener nofollow noreferer" style="color: rgb(62, 129, 173);" target="_blank">Firemonkeys Studios / EA</a></span>
                     </div>
                     <div class="tech-spec-item">
                         <span class="tech-spec-label">Android</span>
