--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </section>
 
             <section id="cars-tracks">
-                <h2>Cars & Tracks in Real Racing 3 Mod APK</h2>
+                <h2>Cars and Tracks in Real Racing 3 Mod APK</h2>
 
                 <h3>Massive Car Collection</h3>
                 <p>The game features an unparalleled roster of vehicles. With the mod, you can instantly access:</p>
