Add version query string to CSS for cache busting

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="canonical" href="https://realracing3modapk.site/">
     <link rel="icon" type="image/icon" href="favicon.ico">
     <link rel="dns-prefetch" href="https://www.dropbox.com">
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="style.css?v=14.0.1" media="print" onload="this.media='all'">
     <noscript>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css?v=14.0.1">
     </noscript>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
