--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
                 </ul>
                 <div style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap;">
                     <img src="./Real Racing 3 MOD APK gameplay.webp" alt="Real Racing 3 MOD APK gameplay screenshot"
-                        style="width: 800px; ">
+                        class="gameplay-screenshot">
                     <img src="./Real Racing 3 MOD APK gameplay screenshot.webp"
-                        alt="Real Racing 3 MOD APK gameplay screenshot" style="width: 800px;">
+                        alt="Real Racing 3 MOD APK gameplay screenshot" class="gameplay-screenshot">
                 </div>
             </section>
 
