--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@700;800&display=swap"
             rel="stylesheet">
     </noscript>
+    <style>
+        
+.gameplay-screenshot {
+    max-width: 800px;
+    width: 100%;
+    border-radius: 12px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+    </style>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
